@@ -3,6 +3,10 @@ update-manager (1:0.87.2) hardy; urgency=low
   * DistUpgrade/DistUpgradeApport.py:
     - better detection for followup errors when a package failed
       earlier
+  * DistUpgrade/DistUpgradeController.py:
+    - Be more tolerant against errors in the initial apt-get update
+      operation. We disable third party sources on the later 
+      sources.list rewrite anyway
 
  --
 
